# lmrenov-db

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: db_connection.py  main.py  server.py
scripts/: bikes_data.py  check_db_connection.py  client.py  create_bike_collection.py  test.py  tmp.py
