[project]
name = "lmrenov-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
]
